--- a/NewsApp/Resources/Base.lproj/Main.storyboard
+++ b/NewsApp/Resources/Base.lproj/Main.storyboard
@@ -38,13 +38,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qyb-XB-z0t">
-                                                    <rect key="frame" x="16" y="25" width="382" height="163"/>
+                                                    <rect key="frame" x="16" y="20" width="382" height="168"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeHolder" translatesAutoresizingMaskIntoConstraints="NO" id="uoZ-zl-qSJ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="163"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="168"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019-07-03" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IJf-C0-BdC">
-                                                            <rect key="frame" x="46.5" y="137" width="65" height="16"/>
+                                                            <rect key="frame" x="46.5" y="142" width="65" height="16"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="h3J-Ox-Xu8"/>
                                                             </constraints>
@@ -53,13 +53,13 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CNN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oku-dq-i0P">
-                                                            <rect key="frame" x="12" y="137" width="26.5" height="16"/>
+                                                            <rect key="frame" x="12" y="142" width="26.5" height="16"/>
                                                             <fontDescription key="fontDescription" name="RobotoSlab-Bold" family="Roboto Slab" pointSize="12"/>
                                                             <color key="textColor" red="0.72941176470588232" green="0.72941176470588232" blue="0.72941176470588232" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Next Big Thing After Bitcoin. Why Today’s Stocks Are Outdated." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umT-2z-UbM">
-                                                            <rect key="frame" x="12" y="64" width="358" height="60"/>
+                                                            <rect key="frame" x="12" y="69" width="358" height="60"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="60" id="jxC-9l-COR"/>
                                                             </constraints>
@@ -89,13 +89,19 @@
                                             </subviews>
                                             <color key="backgroundColor" red="0.1333139837" green="0.13334444170000001" blue="0.1333120763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
-                                                <constraint firstItem="qyb-XB-z0t" firstAttribute="top" secondItem="X8c-CS-2Ch" secondAttribute="top" constant="25" id="BfY-1M-ufh"/>
+                                                <constraint firstItem="qyb-XB-z0t" firstAttribute="top" secondItem="X8c-CS-2Ch" secondAttribute="top" constant="20" id="BfY-1M-ufh"/>
                                                 <constraint firstAttribute="trailing" secondItem="qyb-XB-z0t" secondAttribute="trailing" constant="16" id="DEb-qy-fyb"/>
                                                 <constraint firstItem="qyb-XB-z0t" firstAttribute="leading" secondItem="X8c-CS-2Ch" secondAttribute="leading" constant="16" id="VK1-9e-v9Z"/>
                                                 <constraint firstAttribute="bottom" secondItem="qyb-XB-z0t" secondAttribute="bottom" id="brm-tZ-iwH"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.1333139837" green="0.13334444170000001" blue="0.1333120763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <outlet property="newsAuthorLbl" destination="oku-dq-i0P" id="zRb-2d-nhs"/>
+                                            <outlet property="newsDateLbl" destination="IJf-C0-BdC" id="oJr-bT-Jci"/>
+                                            <outlet property="newsImageView" destination="uoZ-zl-qSJ" id="max-SY-cdv"/>
+                                            <outlet property="newsTitleLbl" destination="umT-2z-UbM" id="ceG-SL-F7L"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
