--- a/NewsApp/Resources/Base.lproj/Main.storyboard
+++ b/NewsApp/Resources/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="04z-Gd-3xR">
-    <device id="retina6_1" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -23,11 +23,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="NewsListViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GQF-W7-f39">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                                 <color key="backgroundColor" red="0.13331398367881775" green="0.13334444165229797" blue="0.13331207633018494" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="newsCell" rowHeight="188" id="9K1-1G-UJ0" customClass="NewsCell" customModule="NewsApp" customModuleProvider="target">
@@ -44,7 +44,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="382" height="168"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019-07-03" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IJf-C0-BdC">
-                                                            <rect key="frame" x="46.5" y="142" width="65" height="16"/>
+                                                            <rect key="frame" x="46.666666666666657" y="142" width="65" height="16"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="h3J-Ox-Xu8"/>
                                                             </constraints>
@@ -53,7 +53,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CNN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oku-dq-i0P">
-                                                            <rect key="frame" x="12" y="142" width="26.5" height="16"/>
+                                                            <rect key="frame" x="12.000000000000002" y="142" width="26.666666666666671" height="16"/>
                                                             <fontDescription key="fontDescription" name="RobotoSlab-Bold" family="Roboto Slab" pointSize="12"/>
                                                             <color key="textColor" red="0.72941176470588232" green="0.72941176470588232" blue="0.72941176470588232" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -133,14 +133,14 @@
             <objects>
                 <viewController storyboardIdentifier="headlineDetailsViewController" id="7Op-DR-Cjj" customClass="HeadlineDetailsViewController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7eR-8k-h4N">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeHolder" translatesAutoresizingMaskIntoConstraints="NO" id="axO-hX-bM7">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Next Big Thing After Bitcoin. Why Today’s Stocks Are Outdated." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RUQ-5l-L3k">
-                                <rect key="frame" x="24" y="493" width="366" height="115"/>
+                                <rect key="frame" x="24" y="356.66666666666669" width="366" height="115"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="115" id="Rq7-Ru-mQc"/>
                                 </constraints>
@@ -149,7 +149,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="7GB-fw-UU8">
-                                <rect key="frame" x="24" y="658" width="366" height="20"/>
+                                <rect key="frame" x="24" y="521.66666666666663" width="366" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CNN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1uL-lw-pCA">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="20"/>
@@ -162,7 +162,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019-07-09" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Pk-Yy-Xmz">
-                                        <rect key="frame" x="261" y="0.0" width="105" height="20"/>
+                                        <rect key="frame" x="263.33333333333331" y="0.0" width="102.66666666666669" height="20"/>
                                         <fontDescription key="fontDescription" name="RobotoSlab-Regular" family="Roboto Slab" pointSize="20"/>
                                         <color key="textColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -173,7 +173,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pE-WN-Hty">
-                                <rect key="frame" x="24" y="690" width="366" height="82"/>
+                                <rect key="frame" x="24" y="553.66666666666663" width="366" height="92.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="Hpe-wB-asa"/>
                                 </constraints>
@@ -183,7 +183,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CzI-gP-Jzj">
-                                <rect key="frame" x="8" y="49" width="55" height="55"/>
+                                <rect key="frame" x="13" y="29" width="55" height="55"/>
                                 <color key="backgroundColor" red="0.16857966780662537" green="0.16849115490913391" blue="0.17675948143005371" alpha="0.49645226883561649" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="55" id="14h-Kx-dDS"/>
@@ -200,12 +200,12 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="7GB-fw-UU8" firstAttribute="top" secondItem="RUQ-5l-L3k" secondAttribute="bottom" constant="50" id="5AX-hU-4Jd"/>
-                            <constraint firstItem="CzI-gP-Jzj" firstAttribute="top" secondItem="mea-4a-1Wq" secondAttribute="top" constant="5" id="80E-hH-D9O"/>
+                            <constraint firstItem="CzI-gP-Jzj" firstAttribute="top" secondItem="mea-4a-1Wq" secondAttribute="top" constant="9" id="80E-hH-D9O"/>
                             <constraint firstItem="RUQ-5l-L3k" firstAttribute="leading" secondItem="mea-4a-1Wq" secondAttribute="leading" constant="24" id="8OV-aX-jqS"/>
                             <constraint firstItem="axO-hX-bM7" firstAttribute="leading" secondItem="mea-4a-1Wq" secondAttribute="leading" id="B0t-Rk-7r0"/>
                             <constraint firstItem="mea-4a-1Wq" firstAttribute="bottom" secondItem="axO-hX-bM7" secondAttribute="bottom" id="KKf-Na-zSr"/>
                             <constraint firstItem="6pE-WN-Hty" firstAttribute="leading" secondItem="RUQ-5l-L3k" secondAttribute="leading" id="L6a-Rz-oAn"/>
-                            <constraint firstItem="CzI-gP-Jzj" firstAttribute="leading" secondItem="mea-4a-1Wq" secondAttribute="leading" constant="8" id="OZt-lb-QCZ"/>
+                            <constraint firstItem="CzI-gP-Jzj" firstAttribute="leading" secondItem="mea-4a-1Wq" secondAttribute="leading" constant="13" id="OZt-lb-QCZ"/>
                             <constraint firstItem="7GB-fw-UU8" firstAttribute="leading" secondItem="RUQ-5l-L3k" secondAttribute="leading" id="ZaC-pT-MRM"/>
                             <constraint firstItem="mea-4a-1Wq" firstAttribute="trailing" secondItem="RUQ-5l-L3k" secondAttribute="trailing" constant="24" id="dAa-gG-7wy"/>
                             <constraint firstItem="7GB-fw-UU8" firstAttribute="trailing" secondItem="RUQ-5l-L3k" secondAttribute="trailing" id="fuo-Zd-nJh"/>
@@ -236,7 +236,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="04z-Gd-3xR" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="NAe-Rx-RrQ">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
